_openshift/yaml/3-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-express
  labels:
    app: demo-express
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    deployment: demo-express
