_openshift/yaml/4-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo-express
  labels: {}
spec:
  to:
    kind: Service
    name: demo-express
  tls: null
  port:
    targetPort: 8080
